--- a/server1.config
+++ b/server1.config
@@ -1,5 +1,5 @@
 server.name=RSA1
-server.capacity=9
-server.elements=Goodbye Moon Thing Other
+server.capacity=10
+server.elements=Hello world I'm zach
 server.port=0
 server.leader=RSA
